refactor(DDD): 도메인 계층으로부터 객체 변환 로직을 분리하여 표현 계층(DTO)으로 이동